Fix background image overflow

--- a/about.css
+++ b/about.css
@@ -66,12 +66,14 @@
   }
   
   .history {
+    width: 100%;
     background-color: #fff;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     padding: 2rem 0;
+    z-index: 1;
   }
   
   .history h2 {
