--- a/footer.css
+++ b/footer.css
@@ -59,6 +59,7 @@ footer {
   padding: 1.5rem 0;
   width: 80%;
   display: flex;
+  align-items: center;
   justify-content: space-between;
   gap: 1rem;
 }
